sklearn to transform data, markup improvements

--- a/tf-2-workflow/tf-2-workflow.ipynb
+++ b/tf-2-workflow/tf-2-workflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TensorFlow 2 Complete Workflow: Script Mode / Auto Model Tuning\n",
+    "## TensorFlow 2 Workflow: Script Mode, Prototyping, Auto Model Tuning\n",
     "\n",
     "If you are using TensorFlow 2+ (or 1.x versions 1.11+), you can use Amazon SageMaker's prebuilt TensorFlow containers with TensorFlow training scripts similar to those you would use outside SageMaker. This feature is named Script Mode.\n",
     "\n",
@@ -38,7 +38,7 @@
    "source": [
     "# Prepare dataset\n",
     "\n",
-    "Next, we'll import the dataset. The dataset itself is small and relatively issue-free. For example, there are no missing values, a common problem for many other datasets. Accordingly, preprocessing just involves normalizing the data.  We will perform that preprocessing step within this notebook, though for larger datasets with more complex preprocessing needs, using **SageMaker Processing** would be a better alternative.  "
+    "Next, we'll import the dataset. The dataset itself is small and relatively issue-free. For example, there are no missing values, a common problem for many other datasets. Accordingly, preprocessing mainly involves normalizing the data.  We will perform that preprocessing step within this notebook, though for larger datasets with more complex preprocessing needs, using **SageMaker Processing** would be a better alternative.  SageMaker Processing includes off-the-shelf support for Scikit-Learn, as well as Bring Your Own options, and can be used to process terabytes of data in a SageMaker-managed cluster.  "
    ]
   },
   {
@@ -48,18 +48,13 @@
    "outputs": [],
    "source": [
     "from tensorflow.python.keras.datasets import boston_housing\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "(x_train, y_train), (x_test, y_test) = boston_housing.load_data()\n",
-    "mean = x_train.mean(axis=0)\n",
-    "std = x_train.std(axis=0)\n",
     "\n",
-    "x_train = (x_train - mean) / (std + 1e-8)\n",
-    "x_test = (x_test - mean) / (std + 1e-8)\n",
-    "\n",
-    "print('x train', x_train.shape, x_train.mean(), x_train.std())\n",
-    "print('y train', y_train.shape, y_train.mean(), y_train.std())\n",
-    "print('x test', x_test.shape, x_test.mean(), x_test.std())\n",
-    "print('y test', y_test.shape, y_test.mean(), y_test.std())"
+    "scaler = StandardScaler()\n",
+    "x_train = scaler.fit_transform(x_train)\n",
+    "x_test = scaler.transform(x_test)"
    ]
   },
   {
@@ -89,7 +84,7 @@
    "source": [
     "##  Local Mode training\n",
     "\n",
-    "Amazon SageMaker’s Local Mode training feature is a convenient way to make sure your code is working as expected before moving on to full scale, hosted training. To train in Local Mode, it is necessary to have docker-compose or nvidia-docker-compose (for GPU instances) installed. Running the following commands will install docker-compose or nvidia-docker-compose, and configure the notebook environment for you."
+    "Amazon SageMaker’s Local Mode training feature is a convenient way to make sure your code is working locally as expected before moving on to full scale, hosted training in a separate SageMaker-managed cluster. To train in Local Mode, it is necessary to have docker-compose or nvidia-docker-compose (for GPU instances) installed. Running the following commands will install docker-compose or nvidia-docker-compose, and configure the notebook environment for you."
    ]
   },
   {
@@ -109,12 +104,11 @@
    "source": [
     "Next, we'll set up a TensorFlow Estimator for Local Mode training. Key parameters for the Estimator include:\n",
     "\n",
-    "- `git_config`:  to make sure training scripts are source controlled for coordinated, shared use by a team, the Estimator can pull in the code from a Git repository rather than local directories.  \n",
     "- `train_instance_type`: the kind of hardware on which training will run. In the case of Local Mode, we simply set this parameter to `local` to invoke Local Mode training on the CPU, or to `local_gpu` if the instance has a GPU. \n",
-    "\n",
+    "- `git_config`:  to make sure training scripts are source controlled for coordinated, shared use by a team, the Estimator can pull in the code from a Git repository rather than local directories.  \n",
     "- Other parameters of note: include the algorithm’s hyperparameters, which are passed in as a dictionary, and a Boolean parameter indicating that we are using Script Mode. \n",
     "\n",
-    "Recall that we are using Local Mode here mainly to make sure our code is working. Accordingly, instead of performing a full cycle of training with many epochs (passes over the full dataset), we'll train only for a small number of epochs to confirm the code is working properly and avoid wasting training time unnecessarily."
+    "Recall that we are using Local Mode here mainly to make sure our code is working. Accordingly, instead of performing a full cycle of training with many epochs (passes over the full dataset), we'll train only for a small number of epochs just to confirm the code is working properly and avoid wasting training time unnecessarily."
    ]
   },
   {
@@ -134,17 +128,24 @@
     "hyperparameters = {'epochs': 5, 'batch_size': 128, 'learning_rate': 0.01}\n",
     "local_estimator = TensorFlow(\n",
     "                       git_config=git_config,\n",
-    "                       source_dir='tf-2-complete-workflow/train_model',\n",
+    "                       source_dir='tf-2-workflow/train_model',\n",
     "                       entry_point='train.py',\n",
     "                       model_dir=model_dir,\n",
     "                       train_instance_type=train_instance_type,\n",
     "                       train_instance_count=1,\n",
     "                       hyperparameters=hyperparameters,\n",
     "                       role=sagemaker.get_execution_role(),\n",
-    "                       base_job_name='tf-2-complete-workflow',\n",
+    "                       base_job_name='tf-2-workflow',\n",
     "                       framework_version='2.1',\n",
     "                       py_version='py3',\n",
     "                       script_mode=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `fit` method call below starts the Local Mode training job.  Metrics for training will be logged below the code, inside the notebook cell.  You should observe the validation loss decrease substantially over the five epochs, with no training errors, which is a good indication that our training code is working as expected."
    ]
   },
   {
@@ -248,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_prefix = 'tf-2-complete-workflow'\n",
+    "s3_prefix = 'tf-2-workflow'\n",
     "\n",
     "traindata_s3_prefix = '{}/data/train'.format(s3_prefix)\n",
     "testdata_s3_prefix = '{}/data/test'.format(s3_prefix)"
@@ -272,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're now ready to set up an Estimator object for hosted training. It is similar to the Local Mode Estimator, except the `train_instance_type` has been set to a SageMaker ML instance type instead of `local` for Local Mode. Also, since we know our code is working now, we'll train for a larger number of epochs.\n",
+    "We're now ready to set up an Estimator object for hosted training. It is similar to the Local Mode Estimator, except the `train_instance_type` has been set to a SageMaker ML instance type instead of `local` for Local Mode. Also, since we know our code is working now, we'll train for a larger number of epochs with the expectation that model training will converge to an improved, lower validation loss.\n",
     "\n",
     "With these two changes, we simply call `fit` to start the actual hosted training."
    ]
@@ -288,17 +289,24 @@
     "\n",
     "estimator = TensorFlow(\n",
     "                       git_config=git_config,\n",
-    "                       source_dir='tf-2-complete-workflow/train_model',\n",
+    "                       source_dir='tf-2-workflow/train_model',\n",
     "                       entry_point='train.py',\n",
     "                       model_dir=model_dir,\n",
     "                       train_instance_type=train_instance_type,\n",
     "                       train_instance_count=1,\n",
     "                       hyperparameters=hyperparameters,\n",
     "                       role=sagemaker.get_execution_role(),\n",
-    "                       base_job_name='tf-2-complete-workflow',\n",
+    "                       base_job_name='tf-2-workflow',\n",
     "                       framework_version='2.1',\n",
     "                       py_version='py3',\n",
     "                       script_mode=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After starting the hosted training job with the `fit` method call below, you should observe the training converge over the longer number of epochs to a validation loss that is considerably lower than that which was achieved in the shorter Local Mode training job.  Can we do better? We'll look into a way to do so in the **Automatic Model Tuning** section below. "
    ]
   },
   {
@@ -314,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As with the Local Mode training, hosted training produces a model saved in S3 that we can retrieve.  This is an example of the modularity of SageMaker: having trained the model in SageMaker, you can now take the model out of SageMaker and run it anywhere else.  Alternatively, you can deploy the model using SageMaker's hosted endpoints functionality.\n",
+    "As with the Local Mode training, hosted training produces a model saved in S3 that we can retrieve.  This is an example of the modularity of SageMaker: having trained the model in SageMaker, you can now take the model out of SageMaker and run it anywhere else.  Alternatively, you can deploy the model into a production-ready environment using SageMaker's hosted endpoints functionality, as shown in the **SageMaker hosted endpoint** section below.\n",
     "\n",
     "Retrieving the model from S3 is very easy:  the hosted training estimator you created above stores a reference to the model's location in S3.  You simply copy the model from S3 using the estimator's `model_data` property and unzip it to inspect the contents."
    ]
@@ -413,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the tuning job is finished, we can use the `HyperparameterTuningJobAnalytics` object from the SageMaker Python SDK to list the top 5 tuning jobs with the best performance. Although the results typically vary from tuning job to tuning job, the best validation loss from the tuning job (under the FinalObjectiveValue column) likely will be lower than the validation loss from the hosted training job above.  "
+    "After the tuning job is finished, we can use the `HyperparameterTuningJobAnalytics` object from the SageMaker Python SDK to list the top 5 tuning jobs with the best performance. Although the results typically vary from tuning job to tuning job, the best validation loss from the tuning job (under the FinalObjectiveValue column) likely will be substantially lower than the validation loss from the hosted training job above, where we did not perform any tuning other than manually increasing the number of epochs once.  "
    ]
   },
   {
@@ -430,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The total training time and training jobs status can be checked with the following lines of code. Because automatic early stopping is by default off, all the training jobs should be completed normally.  For an example of a more in-depth analysis of a tuning job, see the [HPO_Analyze_TuningJob_Results.ipynb](https://github.com/awslabs/amazon-sagemaker-examples/blob/master/hyperparameter_tuning/analyze_results/HPO_Analyze_TuningJob_Results.ipynb) notebook."
+    "The total training time and training jobs status can be checked with the following lines of code. Because automatic early stopping is by default off, all the training jobs should be completed normally.  For an example of a more in-depth analysis of a tuning job, see the SageMaker official sample [HPO_Analyze_TuningJob_Results.ipynb](https://github.com/awslabs/amazon-sagemaker-examples/blob/master/hyperparameter_tuning/analyze_results/HPO_Analyze_TuningJob_Results.ipynb) notebook."
    ]
   },
   {
@@ -452,7 +460,7 @@
     "\n",
     "Assuming the best model from the tuning job is better than the model produced by the individual Hosted Training job above, we could now easily deploy that model to production.  A convenient option is to use a SageMaker hosted endpoint, which serves real time predictions from the trained model (Batch Transform jobs also are available for asynchronous, offline predictions on large datasets). The endpoint will retrieve the TensorFlow SavedModel created during training and deploy it within a SageMaker TensorFlow Serving container. This all can be accomplished with one line of code.  \n",
     "\n",
-    "More specifically, by calling the `deploy` method of the HyperparameterTuner object we instantiated above, we can directly deploy the best model from the tuning job to a SageMaker hosted endpoint:"
+    "More specifically, by calling the `deploy` method of the HyperparameterTuner object we instantiated above, we can directly deploy the best model from the tuning job to a SageMaker hosted endpoint.  It will take several minutes longer to deploy the model to the hosted endpoint compared to the Local Mode endpoint, which is more useful for fast prototyping of inference code.  "
    ]
   },
   {
