integrate Step Functions Data Science SDK in tf 2 example

--- a/tf-2-workflow/tf-2-workflow.ipynb
+++ b/tf-2-workflow/tf-2-workflow.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "If you are using TensorFlow 2+ (or 1.x versions 1.11+), you can use Amazon SageMaker's prebuilt TensorFlow containers with TensorFlow training scripts similar to those you would use outside SageMaker. This feature is named Script Mode.\n",
     "\n",
-    "This notebook presents a relatively complete workflow to demonstrate not only Script Mode, but several other SageMaker features that are typically used in TensorFlow projects. The workflow includes prototyping with SageMaker's Local Mode training and inference features, and also showcases SageMaker's production-ready features for hosted training and inference. Additionally, Automatic Model Tuning in SageMaker will be used to tune the model's hyperparameters.  This workflow will be applied to a straightforward regression task, predicting house prices based on the well-known Boston Housing dataset. This public dataset contains 13 features regarding housing stock of towns in the Boston area.  Features include average number of rooms, accessibility to radial highways, adjacency to the Charles River, etc.  \n",
+    "This notebook presents a relatively complete workflow to demonstrate not only Script Mode, but several other SageMaker features that are typically used in TensorFlow projects. The workflow includes prototyping with SageMaker's Local Mode training and inference features, and also showcases SageMaker's production-ready features for hosted training and inference. Automatic Model Tuning in SageMaker will be used to tune the model's hyperparameters.  Additionally, the [AWS Step Functions Data Science SDK](https://aws-step-functions-data-science-sdk.readthedocs.io/en/latest/readmelink.html) will be used to automate the main training and deployment workflow for use in a production environment outside notebooks.    \n",
+    "\n",
+    "TensorFlow will be applied to a straightforward regression task, predicting house prices based on the well-known Boston Housing dataset. This public dataset contains 13 features regarding housing stock of towns in the Boston area.  Features include average number of rooms, accessibility to radial highways, adjacency to the Charles River, etc.  \n",
     "\n",
     "To begin, we'll import some necessary packages and set up directories for local training and test data.  For full scale hosted training, we'll later upload data to Amazon S3.  "
    ]
@@ -511,11 +513,358 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Workflow Automation with the Step Functions Data Science SDK\n",
+    "\n",
+    "In the previous parts of this notebook, we prototyped various steps of a TensorFlow project within the notebook itself.  Notebooks are great for prototyping, but generally are  not used in production-ready machine learning pipelines.  Outside of a notebook, a simple pipeline in SageMaker is a four step workflow that includes the following steps:  \n",
+    "\n",
+    "1. Training the model.\n",
+    "2. Creating a SageMaker Model object that wraps the model artifact for serving.\n",
+    "3. Creating a SageMaker Endpoint Configuration specifying how the model should be served (e.g. hardware type and amount).\n",
+    "4. Deploying the trained model to the configured SageMaker Endpoint.  \n",
+    "\n",
+    "The Step Functions Data Science SDK automates the process of creating and running these kinds of workflows using Step Functions and SageMaker.  It does this by allowing you to create workflows using short, simple Python scripts that define workflow steps and chain them together.  Under the hood, all the workflow steps are coordinated by Step Functions without any need for you to manage the underlying infrastructure.  \n",
+    "\n",
+    "To begin, install the Step Functions Data Science SDK:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "!{sys.executable} -m pip install --quiet --upgrade stepfunctions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add a policy to your SageMaker role in IAM\n",
+    "\n",
+    "**If you are running this notebook on an Amazon SageMaker notebook instance**, the IAM role assumed by your notebook instance needs permission to create and run workflows in AWS Step Functions. To provide this permission to the role, do the following.\n",
+    "\n",
+    "1. Open the Amazon [SageMaker console](https://console.aws.amazon.com/sagemaker/). \n",
+    "2. Select **Notebook instances** and choose the name of your notebook instance\n",
+    "3. Under **Permissions and encryption** select the role ARN to view the role on the IAM console\n",
+    "4. Choose **Attach policies** and search for `AWSStepFunctionsFullAccess`.\n",
+    "5. Select the check box next to `AWSStepFunctionsFullAccess` and choose **Attach policy**\n",
+    "\n",
+    "If you are running this notebook in a local environment, the SDK will use your configured AWS CLI configuration. For more information, see [Configuring the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html).\n",
+    "\n",
+    "\n",
+    "### Create an execution role for Step Functions\n",
+    "\n",
+    "You also need to create an execution role for Step Functions to enable that service to access SageMaker and other service functionality.\n",
+    "\n",
+    "1. Go to the [IAM console](https://console.aws.amazon.com/iam/)\n",
+    "2. Select **Roles** and then **Create role**.\n",
+    "3. Under **Choose the service that will use this role** select **Step Functions**\n",
+    "4. Choose **Next** until you can enter a **Role name**\n",
+    "5. Enter a name such as `StepFunctionsWorkflowExecutionRole` and then select **Create role**\n",
+    "\n",
+    "\n",
+    "Select your newly create role and attach a policy to it. The following steps attach a policy that provides full access to Step Functions, however as a good practice you should only provide access to the resources you need.  \n",
+    "\n",
+    "1. Under the **Permissions** tab, click **Add inline policy**\n",
+    "2. Enter the following in the **JSON** tab\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "    \"Version\": \"2012-10-17\",\n",
+    "    \"Statement\": [\n",
+    "        {\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\n",
+    "                \"sagemaker:CreateTransformJob\",\n",
+    "                \"sagemaker:DescribeTransformJob\",\n",
+    "                \"sagemaker:StopTransformJob\",\n",
+    "                \"sagemaker:CreateTrainingJob\",\n",
+    "                \"sagemaker:DescribeTrainingJob\",\n",
+    "                \"sagemaker:StopTrainingJob\",\n",
+    "                \"sagemaker:CreateHyperParameterTuningJob\",\n",
+    "                \"sagemaker:DescribeHyperParameterTuningJob\",\n",
+    "                \"sagemaker:StopHyperParameterTuningJob\",\n",
+    "                \"sagemaker:CreateModel\",\n",
+    "                \"sagemaker:CreateEndpointConfig\",\n",
+    "                \"sagemaker:CreateEndpoint\",\n",
+    "                \"sagemaker:DeleteEndpointConfig\",\n",
+    "                \"sagemaker:DeleteEndpoint\",\n",
+    "                \"sagemaker:UpdateEndpoint\",\n",
+    "                \"sagemaker:ListTags\",\n",
+    "                \"lambda:InvokeFunction\",\n",
+    "                \"sqs:SendMessage\",\n",
+    "                \"sns:Publish\",\n",
+    "                \"ecs:RunTask\",\n",
+    "                \"ecs:StopTask\",\n",
+    "                \"ecs:DescribeTasks\",\n",
+    "                \"dynamodb:GetItem\",\n",
+    "                \"dynamodb:PutItem\",\n",
+    "                \"dynamodb:UpdateItem\",\n",
+    "                \"dynamodb:DeleteItem\",\n",
+    "                \"batch:SubmitJob\",\n",
+    "                \"batch:DescribeJobs\",\n",
+    "                \"batch:TerminateJob\",\n",
+    "                \"glue:StartJobRun\",\n",
+    "                \"glue:GetJobRun\",\n",
+    "                \"glue:GetJobRuns\",\n",
+    "                \"glue:BatchStopJobRun\"\n",
+    "            ],\n",
+    "            \"Resource\": \"*\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\n",
+    "                \"iam:PassRole\"\n",
+    "            ],\n",
+    "            \"Resource\": \"*\",\n",
+    "            \"Condition\": {\n",
+    "                \"StringEquals\": {\n",
+    "                    \"iam:PassedToService\": \"sagemaker.amazonaws.com\"\n",
+    "                }\n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\n",
+    "                \"events:PutTargets\",\n",
+    "                \"events:PutRule\",\n",
+    "                \"events:DescribeRule\"\n",
+    "            ],\n",
+    "            \"Resource\": [\n",
+    "                \"arn:aws:events:*:*:rule/StepFunctionsGetEventsForSageMakerTrainingJobsRule\",\n",
+    "                \"arn:aws:events:*:*:rule/StepFunctionsGetEventsForSageMakerTransformJobsRule\",\n",
+    "                \"arn:aws:events:*:*:rule/StepFunctionsGetEventsForSageMakerTuningJobsRule\",\n",
+    "                \"arn:aws:events:*:*:rule/StepFunctionsGetEventsForECSTaskRule\",\n",
+    "                \"arn:aws:events:*:*:rule/StepFunctionsGetEventsForBatchJobsRule\"\n",
+    "            ]\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "3. Choose **Review policy** and give the policy a name such as `StepFunctionsWorkflowExecutionPolicy`\n",
+    "4. Choose **Create policy**. You will be redirected to the details page for the role.\n",
+    "5. Copy the **Role ARN** at the top of the **Summary**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up a TrainingPipeline\n",
+    "\n",
+    "Although the Step Functions Data Science SDK provides various primitives to build up pipelines from scratch, it also provides prebuilt templates for common workflows, including a [TrainingPipeline](https://aws-step-functions-data-science-sdk.readthedocs.io/en/latest/pipelines.html#stepfunctions.template.pipeline.train.TrainingPipeline) API to simplify pipeline creation. \n",
+    "\n",
+    "The following code cell configures a  `pipeline` object with the necessary parameters to define a simple pipeline for training:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import stepfunctions\n",
+    "\n",
+    "from stepfunctions.template.pipeline import TrainingPipeline\n",
+    "\n",
+    "# paste the StepFunctionsWorkflowExecutionRole ARN from above\n",
+    "workflow_execution_role = \"<execution-role-arn>\"\n",
+    "bucket = ''\n",
+    "\n",
+    "pipeline = TrainingPipeline(\n",
+    "    estimator=estimator,\n",
+    "    role=workflow_execution_role,\n",
+    "    inputs=inputs,\n",
+    "    s3_bucket=sagemaker.Session().default_bucket()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing the workflow\n",
+    "\n",
+    "You can now view the workflow definition, and visualize it as a graph. This workflow and graph represent your training pipeline from starting a training job to deploying the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(pipeline.workflow.definition.to_json(pretty=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.render_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating and executing the pipeline\n",
+    "\n",
+    "Before the workflow can be run for the first time, the pipeline must be created using the `create` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.create()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the workflow can be started by invoking the pipeline's `execute` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execution = pipeline.execute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the `list_executions` method to list all executions for the workflow you created, including the one we just started.  After a pipeline is created, it can be executed as many times as needed, for example on a schedule for retraining on new data.  (For purposes of this notebook just execute the workflow one time to save resources.)  The output will include a list you can click through to access a view of the execution in the Step Functions console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.workflow.list_executions(html=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While the workflow is running, you can check workflow progress inside this notebook with the `render_progress` method.  This generates a snapshot of the current state of your workflow as it executes. This is a static image. Run the cell again to check progress while the workflow is running."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execution.render_progress()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before proceeding with the rest of the notebook, wait until the workflow completes with status **Succeeded**, which will take a few minutes.  You can check status with `render_progress` above, or open in a new browser tab the **Inspect in AWS Step Functions** link in the cell output.  \n",
+    "\n",
+    "To view the details of the completed workflow execution, from model training through deployment, use the `list_events` method, which lists all events in the workflow execution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execution.list_events(reverse_order=True, html=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this list of events, we can extract the name of the endpoint that was set up by the workflow.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "endpoint_name_suffix = re.search('endpoint\\Wtraining\\Wpipeline\\W([a-zA-Z0-9\\W]+?)\"', str(execution.list_events())).group(1)\n",
+    "print(endpoint_name_suffix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have the endpoint name, we can use it to instantiate a TensorFlowPredictor object that wraps the endpoint.  This TensorFlowPredictor can be used to make predictions, as shown in the following code cell.  \n",
+    "\n",
+    "Before running the cell, go to the [SageMaker console](https://console.aws.amazon.com/sagemaker/), click **Endpoints** in the left panel, and make sure that the endpoint status is **InService**.  If the status is **Creating**, wait until it changes, which may take several minutes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.tensorflow import TensorFlowPredictor\n",
+    "\n",
+    "workflow_predictor = TensorFlowPredictor('training-pipeline-' + endpoint_name_suffix)\n",
+    "\n",
+    "results = workflow_predictor.predict(x_test[:10])['predictions'] \n",
+    "flat_list = [float('%.1f'%(item)) for sublist in results for item in sublist]\n",
+    "print('predictions: \\t{}'.format(np.array(flat_list)))\n",
+    "print('target values: \\t{}'.format(y_test[:10].round(decimals=1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the Step Functions Data Science SDK, there are many other workflows you can create to automate your machine learning tasks.  For example, you could create a workflow to automate model retraining on a periodic basis.  Such a workflow could include a test of model quality after training, with subsequent branches for failing (no model deployment) and passing the quality test (model is deployed).  Other possible workflow steps include Automatic Model Tuning, data preprocessing with AWS Glue, and more.  \n",
+    "\n",
+    "For a detailed example of a retraining workflow, see the AWS ML Blog post [Automating model retraining and deployment using the AWS Step Functions Data Science SDK for Amazon SageMaker](https://aws.amazon.com/blogs/machine-learning/automating-model-retraining-and-deployment-using-the-aws-step-functions-data-science-sdk-for-amazon-sagemaker/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleanup\n",
+    "\n",
+    "The workflow we created above deployed a model to an endpoint.  To avoid billing charges for an unused endpoint, you can delete it using the SageMaker console.  To do so, go to the [SageMaker console](https://console.aws.amazon.com/sagemaker/).  Then click **Endpoints** in the left panel, and select and delete any unneeded endpoints in the list.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extensions\n",
     "\n",
-    "We've covered a lot of content in this notebook:  local and hosted training with Script Mode, local and hosted inference in SageMaker, and Automatic Model Tuning.  These are central elements for most deep learning workflows in SageMaker.  \n",
+    "We've covered a lot of content in this notebook:  local and hosted training with Script Mode, local and hosted inference in SageMaker, and Automatic Model Tuning.  These are central elements for most deep learning workflows in SageMaker.  Additionally, we examined how the Step Functions Data Science SDK helps automate deep learning workflows after the prototyping phase of a project is completed.\n",
     "\n",
-    "Additionally, there are several other SageMaker features that may be applicable.  For example, to handle common problems during deep learning model training such as vanishing or exploding gradients, **SageMaker Debugger** may be useful.  After the model is in production, to manage common problems such as data drift, **SageMaker Model Monitor** can be applied."
+    "Besides all of the SageMaker features explored above, there are many other features that may be applicable to your project.  For example, to handle common problems during deep learning model training such as vanishing or exploding gradients, **SageMaker Debugger** may be useful.  After the model is in production, to manage common problems such as data drift, **SageMaker Model Monitor** can be applied."
    ]
   }
  ],
