adjust formatting for tf2 workflow example

--- a/tf-2-workflow/tf-2-workflow.ipynb
+++ b/tf-2-workflow/tf-2-workflow.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center>TensorFlow 2 Complete Workflow:<center> Data Preprocessing -> Code Prototyping -> Model Tuning -> Deployment\n",
+    "## TensorFlow 2 Complete Project Workflow in Amazon SageMaker\n",
+    "### Data Preprocessing -> Code Prototyping -> Automatic Model Tuning -> Deployment\n",
     "    \n",
     "1. [Introduction](#Introduction)\n",
     "2. [SageMaker Processing for dataset transformation](#SageMakerProcessing)\n",
