R in SageMaker Processing notebook modified to allow running in any AWS Region easily

--- a/r-in-sagemaker-processing/r-in-sagemaker_processing.ipynb
+++ b/r-in-sagemaker-processing/r-in-sagemaker_processing.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, create a Dockerfile.  For this example, we're using a Docker image from the Rocker Project, which provides a set of convenient R Docker images.  There is no need to include your R script because SageMaker Processing will ingest it into the container.  This gives you the flexibility to modify the script as needed without having to rebuild the Docker image every time.  "
+    "Next, create a Dockerfile.  For this example, we're using a Docker image from the Rocker Project, which provides a set of convenient R Docker images.  There is no need to include your R script in the container itself because SageMaker Processing will ingest it for you.  This gives you the flexibility to modify the script as needed without having to rebuild the Docker image every time you modify it.  "
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Dockerfile is now used to build the Docker image.  We'll also create an Amazon Elastic Container Registry (Amazon ECR) repository, and push the image to Amazon ECR."
+    "The Dockerfile is now used to build the Docker image.  We'll also create an Amazon Elastic Container Registry (Amazon ECR) repository, and push the image to Amazon ECR so it can be accessed by SageMaker."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "source": [
     "## SageMaker Processing job with a R script\n",
     "\n",
-    "With our Docker image in ECR, we now prepare for the SageMaker Processing job by specifying S3 buckets for output and input."
+    "With our Docker image in ECR, we now prepare for the SageMaker Processing job by specifying S3 buckets for output and input, and downloading the raw dataset."
    ]
   },
   {
@@ -150,17 +150,36 @@
     "from sagemaker import get_execution_role\n",
     "\n",
     "role = get_execution_role()\n",
-    "sess = sagemaker.Session()\n",
-    "s3_output = sess.default_bucket()\n",
+    "session = sagemaker.Session()\n",
+    "s3_output = session.default_bucket()\n",
     "s3_prefix = 'R-in-Processing'\n",
-    "s3_input = 's3://sagemaker-workshop-pdx/R-in-Processing'"
+    "s3_source = 'sagemaker-workshop-pdx'\n",
+    "session.download_data(path='./data', bucket=s3_source, key_prefix='R-in-Processing/us-500.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ScriptProcessor class of the SageMaker SDK lets you run a command inside a Docker container.  We'll use this to run our own script using the `Rscript` command.  "
+    "Before setting up the SageMaker Processing job, the raw dataset is uploaded to S3 so it is accessible to SageMaker Processing.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rawdata_s3_prefix = '{}/data/raw'.format(s3_prefix)\n",
+    "raw_s3 = session.upload_data(path='./data', key_prefix=rawdata_s3_prefix)\n",
+    "print(raw_s3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `ScriptProcessor` class of the SageMaker SDK lets you run a command inside a Docker container.  We'll use this to run our own script using the `Rscript` command.  In the `ScriptProcessor` you also can specify the type and number of instances to be used in the SageMaker Processing job."
    ]
   },
   {
@@ -200,7 +219,7 @@
     "script_processor.run(code='preprocessing.R',\n",
     "                      job_name=processing_job_name,\n",
     "                      inputs=[ProcessingInput(\n",
-    "                        source=s3_input,\n",
+    "                        source=raw_s3,\n",
     "                        destination='/opt/ml/processing/input')],\n",
     "                      outputs=[ProcessingOutput(output_name='csv',\n",
     "                                                destination='{}/csv'.format(output_destination),\n",
@@ -239,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can display the plot produced by the SageMaker Processing job.  A similar workflow applies to retrieving and working with any other output from a job.  "
+    "Now we can display the plot produced by the SageMaker Processing job.  A similar workflow applies to retrieving and working with any other output from a job, such as the transformed data itself.  "
    ]
   },
   {
@@ -275,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
